<resources>
    <string name="app_name">ECommersApp</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="noAccount">Not have account? Register</string>
    <string name="register_user">Register User</string>
    <string name="recover_pass">Recover Password</string>
    <string name="recover">Recover</string>
    <string name="full_name">Full Name</string>
    <string name="phone">Phone</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="complete_address">Complete Address</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="register_seller">Are you a seller? Register as Seller</string>
    <string name="register">Register</string>
    <string name="shopName">Shop Name</string>
    <string name="deliveryFee">Delivery Fee</string>
    <string name="editProfile">Edit Profile</string>
    <string name="update">Update</string>
    <string name="shop_open">Shop Open</string>
    <string name="add_product">Add Product</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="quantity">Quantity e.g. kg, g etc.</string>
    <string name="price">Price</string>
    <string name="discount">Discount</string>
    <string name="discountPrice">Discount Price</string>
    <string name="discountNote">Discount Note e.g. 10% Off</string>
    <string name="back">Back</string>
    <string name="products">Products</string>
    <string name="orders">Orders</string>
    <string name="search">Search</string>
    <string name="showing_all">Showing All</string>
    <string name="product_details">Product Details</string>
    <string name="shops">Shops</string>
    <string name="closed">Closed</string>
    <string name="address">Address</string>
</resources>