<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditProductActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/shape_rect01"
        android:padding="10dp">

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@null"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_back_white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/add_product"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/productIconIv"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_add_shopping_primary"
                app:civ_border_color="@color/indigo_700"
                app:civ_border_overlay="true"
                app:civ_border_width="1dp" />

            <EditText
                android:id="@+id/titleEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/productIconIv"
                android:layout_margin="5dp"
                android:background="@drawable/shape_rect02"
                android:drawableStart="@drawable/ic_title_gray"
                android:drawablePadding="10dp"
                android:hint="@string/title"
                android:inputType="textPersonName|textCapWords"
                android:padding="10dp" />

            <EditText
                android:id="@+id/descEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/titleEt"
                android:layout_margin="5dp"
                android:background="@drawable/shape_rect02"
                android:drawableStart="@drawable/ic_title_gray"
                android:drawablePadding="10dp"
                android:hint="@string/description"
                android:inputType="textCapSentences|textMultiLine"
                android:padding="10dp" />

            <TextView
                android:id="@+id/categoryTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/descEt"
                android:layout_margin="5dp"
                android:background="@drawable/shape_rect02"
                android:drawablePadding="10dp"
                android:hint="@string/category"
                android:inputType="textCapSentences|textMultiLine"
                android:padding="10dp"
                app:drawableEndCompat="@drawable/ic_down_gray"
                app:drawableStartCompat="@drawable/ic_categories_gray" />

            <EditText
                android:id="@+id/quantityEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/categoryTv"
                android:layout_margin="5dp"
                android:background="@drawable/shape_rect02"
                android:drawableStart="@drawable/ic_cart_gray"
                android:drawablePadding="10dp"
                android:hint="@string/quantity"
                android:inputType="textCapWords"
                android:padding="10dp" />

            <EditText
                android:id="@+id/priceEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/quantityEt"
                android:layout_margin="5dp"
                android:background="@drawable/shape_rect02"
                android:drawableStart="@drawable/ic_cart_gray"
                android:drawablePadding="10dp"
                android:hint="@string/price"
                android:inputType="numberDecimal"
                android:padding="10dp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/discountSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/priceEt"
                android:layout_margin="5dp"
                android:text="@string/discount" />

            <EditText
                android:id="@+id/discountedPriceEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/discountSwitch"
                android:layout_margin="5dp"
                android:background="@drawable/shape_rect02"
                android:drawableStart="@drawable/ic_cart_gray"
                android:drawablePadding="10dp"
                android:hint="@string/discountPrice"
                android:inputType="numberDecimal"
                android:padding="10dp" />

            <EditText
                android:id="@+id/discountedNoteEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/discountedPriceEt"
                android:layout_margin="5dp"
                android:background="@drawable/shape_rect02"
                android:drawableStart="@drawable/ic_cart_gray"
                android:drawablePadding="10dp"
                android:hint="@string/discountNote"
                android:inputType="textCapSentences"
                android:padding="10dp" />

            <Button
                android:id="@+id/updateProductBtn"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/discountedNoteEt"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:minWidth="150dp"
                android:text="@string/update"
                android:textAllCaps="false" />
        </RelativeLayout>
    </ScrollView>

</LinearLayout>