<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.AddProductActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:padding="10dp"
        android:background="@drawable/shape_rect01">

        <ImageButton
            android:id="@+id/backBtn"
            android:src="@drawable/ic_back_white"
            android:background="@null"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/add_product"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"/>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/productIconIv"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_add_shopping_primary"
            app:civ_border_overlay="true"
            app:civ_border_width="1dp"
            app:civ_border_color="@color/indigo_700"/>

        <EditText
            android:id="@+id/titleEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/title"
            android:background="@drawable/shape_rect02"
            android:drawableStart="@drawable/ic_title_gray"
            android:drawablePadding="10dp"
            android:inputType="textPersonName|textCapWords"
            android:padding="10dp"
            android:layout_below="@id/productIconIv"/>

        <EditText
            android:id="@+id/descEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/description"
            android:background="@drawable/shape_rect02"
            android:drawableStart="@drawable/ic_title_gray"
            android:drawablePadding="10dp"
            android:inputType="textCapSentences|textMultiLine"
            android:padding="10dp"
            android:layout_below="@id/titleEt"/>

        <TextView
            android:id="@+id/categoryTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/category"
            android:background="@drawable/shape_rect02"
            android:drawablePadding="10dp"
            android:inputType="textCapSentences|textMultiLine"
            android:padding="10dp"
            android:layout_below="@id/descEt"
            app:drawableEndCompat="@drawable/ic_down_gray"
            app:drawableStartCompat="@drawable/ic_categories_gray" />

        <EditText
            android:id="@+id/quantityEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/quantity"
            android:background="@drawable/shape_rect02"
            android:drawableStart="@drawable/ic_cart_gray"
            android:drawablePadding="10dp"
            android:inputType="textCapWords"
            android:padding="10dp"
            android:layout_below="@id/categoryTv"/>

        <EditText
            android:id="@+id/priceEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/price"
            android:background="@drawable/shape_rect02"
            android:drawableStart="@drawable/ic_cart_gray"
            android:drawablePadding="10dp"
            android:inputType="numberDecimal"
            android:padding="10dp"
            android:layout_below="@id/quantityEt"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/discountSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_below="@id/priceEt"
            android:text="@string/discount"/>

        <EditText
            android:id="@+id/discountedPriceEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/discountPrice"
            android:background="@drawable/shape_rect02"
            android:drawableStart="@drawable/ic_cart_gray"
            android:drawablePadding="10dp"
            android:inputType="numberDecimal"
            android:padding="10dp"
            android:layout_below="@id/discountSwitch"/>

        <EditText
            android:id="@+id/discountedNoteEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/discountNote"
            android:background="@drawable/shape_rect02"
            android:drawableStart="@drawable/ic_cart_gray"
            android:drawablePadding="10dp"
            android:inputType="textCapSentences"
            android:padding="10dp"
            android:layout_below="@id/discountedPriceEt"/>

        <Button
            android:id="@+id/addProductBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/discountedNoteEt"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_centerHorizontal="true"
            android:text="@string/add_product"
            android:textAllCaps="false"
            android:minWidth="150dp"
            android:layout_marginTop="5dp"/>
    </RelativeLayout>
    </ScrollView>

</LinearLayout>